Min.Tests/Samples/ValidSamples/source-07.min
.value int = 1 + 2 + 3
.value = 1 + (.value * 2)