Min.Tests/Samples/InvalidSamples/source-09.min
.value int = 1 + (2 +)